# ansible-chatbot-stack

./: .gitignore  Containerfile  Makefile  README.md  ansible-chatbot-build.yaml  ansible-chatbot-deploy.yaml  ansible-chatbot-mcp-run.yaml  ansible-chatbot-run.yaml  ansible-chatbot-system-prompt.txt  bootstrap.sh  entrypoint.sh  kustomization.yaml  lightspeed-stack-mcp.yaml  lightspeed-stack.yaml  lightspeed-stack_local.yaml  pyproject.toml  requirements.txt
.github/workflows/: build_and_deploy.yml
lightspeed-stack/: Containerfile.lsc  entrypoint.sh  lightspeed-stack.yaml  pyproject.toml
